--- a/stylesheet/styles.scss
+++ b/stylesheet/styles.scss
@@ -40,10 +40,10 @@ $list-group-hover-bg: gray;
     .list-group-item{
     display: flex;
     align-items: center;
-    margin-top: 100px;
+    margin-top: 15px;
+    margin-right: 3px;
     height: 100%;
     width: 80%;
   }
 
-@import "../node_modules/bootstrap/scss/bootstrap.scss"
 
