--- a/stylesheet/styles.scss
+++ b/stylesheet/styles.scss
@@ -52,6 +52,8 @@ $list-group-hover-bg: gray;
 
 
 
+
+
 $colorWhiteLow: rgb(246, 246, 246);
 $colorBlack: rgb(64, 64, 64);
 $colorWhite: rgb(250, 250, 250);
@@ -81,20 +83,27 @@ $colorWhite: rgb(250, 250, 250);
   html {
     width: 100%;
     position: relative;
-   
+    background:black;
+
   }
 
   body {
     display: flex;
     flex-direction: column;
     min-height: 100%;
-    
+ 
 
   }
 
- 
+ .container{
+  background-color: $colorWhiteLow;
+ }
 aside {
     background-color: $colorWhiteLow;
+}
+
+#aside__wal{
+  background-color:rgb(249, 249, 249) !important;
 }
 
 .sidebar__right {
